--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "bevy_mod_mipmap_generator"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+description = "A basic mipmap generator for bevy "
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
